--- a/MLCoreTesting/Base.lproj/Main.storyboard
+++ b/MLCoreTesting/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dx6-Dn-MFl">
-                                <rect key="frame" x="16" y="20" width="94" height="30"/>
+                                <rect key="frame" x="16" y="36" width="94" height="30"/>
                                 <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Select Photo"/>
@@ -36,7 +36,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zhl-ET-x0V">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Zhl-ET-x0V">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                             </imageView>
                         </subviews>
@@ -49,7 +49,7 @@
                             <constraint firstItem="Zhl-ET-x0V" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="egi-6g-KcK"/>
                             <constraint firstAttribute="trailing" secondItem="Zhl-ET-x0V" secondAttribute="trailing" id="r8M-Th-Bln"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="AaA-cV-ujJ" secondAttribute="bottom" constant="20" id="v8U-5H-LVc"/>
-                            <constraint firstItem="Dx6-Dn-MFl" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="zJu-jr-CaK"/>
+                            <constraint firstItem="Dx6-Dn-MFl" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="16" id="zJu-jr-CaK"/>
                         </constraints>
                     </view>
                     <connections>
